--- a/Presentation/recap.tex
+++ b/Presentation/recap.tex
@@ -365,11 +365,11 @@
         \includegraphics[width=\textwidth,]{./Images/latent_MNIST_MMD_MAP.png}
         \caption{MNIST Dataset}
     \end{subfigure}
-    % \begin{subfigure}[b]{0.4\textwidth}
-    %     \centering
-    %     \includegraphics[width=\textwidth]{./Images/latent_MNIST_MMD_MAP.png}
-    %     \caption{Maximum a posteriori}
-    % \end{subfigure}
+    \begin{subfigure}[b]{0.4\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{./Images/latent_FashionMNIST_MMD_MAP.png}
+        \caption{FashionMNIST}
+    \end{subfigure}
     \caption{Latent Space of InfoVAE for Maximum a posteriori}
   \end{figure}
 \end{frame}
